hphp/test/zend/bad/ext/mbstring/tests/mb_eregi_invalid_arguments.php
<?php

mb_regex_encoding('utf-8');

var_dump(mb_eregi('z', 'XYZ'));
var_dump(mb_eregi('xyzp', 'XYZ'));
var_dump(mb_eregi('ö', 'Öäü'));
?>